<resources>
    <string name="app_name">FreshFridge</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="name">Name*</string>
    <string name="description">Description</string>
    <string name="category">Category*</string>
    <string name="expiration_date">Expiration Date*</string>
    <string name="opened">Opened</string>
    <string name="new_fridge_item">New Fridge Item</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="open">Opened</string>
    <string name="enter_date">Enter Date</string>
    <string name="title_fridge">Fridge</string>

    <string name="DAIRY">Dairy</string>
    <string name="FRUITS_VEGETABLES">Fruits &amp; Vegetables</string>
    <string name="RAW_MEAT">Raw meat</string>
    <string name="PROCESSED_MEAT">Processed meat</string>
    <string name="BAKED">Baked goods</string>
    <string name="READY_MEAL">Ready meal</string>
    <string name="DRINK">Drink</string>
    <string name="OTHER">Other</string>

    <string-array name="category_items">
        <item>Dairy</item>
        <item>Fruits &amp; Vegetables</item>
        <item>Raw meat</item>
        <item>Processed meat</item>
        <item>Baked goods</item>
        <item>Ready meal</item>
        <item>Drink</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bought">Bought</string>
</resources>